--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -12,6 +12,25 @@
 - {立} 2MK-HK
 - 2HP: 強制立たせ
 
+## ヒット確認のポイント
+
+- 2LP
+- 2LP/2LK, 2LP
+- MK
+- MK-HK
+- 2MK
+- 6MK
+- HP
+- 6HP
+- HK(pc)
+- グライド
+- Sレオパード
+
+## リーサル確認のポイント
+
+- 2LP, 弱スピン/CR 2LP
+- MK-HK, ホーン/CR HP
+
 ## 2LP
 
 - 2LP 2回, 2LP/LK, 強昇竜: 1590
@@ -35,6 +54,8 @@
 - 2LP, 2LP/LK, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4000
 
 2LPの射程ギリギリだとLKしか届かない。
+
+CならLPにして弱スピンも行ける。
 
 ## 2LP(+2)
 
