--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -340,3 +340,8 @@ DR 6MPは相打ちでもコンボになる。
 （ドライブインパクトへの対応練習）
 
 - DI(pc), ステップ, HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3
+
+## 弱攻撃のコンボ
+
+- 2LP, LK, 強昇竜
+- 2LP, LK, CR 2LP, 2HP, 強スピン, ...
