--- a/shared/management/performance/効率.md
+++ b/shared/management/performance/効率.md
@@ -21,3 +21,6 @@
 影響が大きくても、資源をたくさん使っていると効率が悪い。
 
 この改善をすることで、どの作業が、何時間減る？
+
+忙しいということは効率に淀みがある。真に効率的な場は静かで落ち着いている。
+ただ、それは結果であって、それ自体を求めても意味がない。あくまでも効率的かどうかを見る指標の一つ。
