--- a/shared/voice/training/tips/声を柔らかくする.md
+++ b/shared/voice/training/tips/声を柔らかくする.md
@@ -11,6 +11,9 @@
 
 ## 柔らかくする
 
+声を柔らかくするには響きを増やす。
+基本的には、息を漏らすか、喉を下げるか、のどちらか。息を漏らすと息の音が混ざるし、喉を下げるとより喉の奥でも響く。
+
 口の周りには力を入れずに息を吐き、そのまま音を鳴らす。
 できるだけ息の割合を多く、いきなり声100にならないように。
 
