--- a/study/economics/資本主義.md
+++ b/study/economics/資本主義.md
@@ -32,3 +32,6 @@
 だから、基本的には農耕社会や資本主義自体はやめられない。それは前提として、搾取のない社会を目指すなら、共産主義に代わる方法が必要。
 
 資本主義は正直農耕社会の根幹であって変えられるものではない。社会主義も共産主義もその前提が抜けている。資本主義は主義ではない。
+
+農耕と資本主義は切り離せない。
+資本主義をやめるなら、狩猟採集の時代に戻るしかない。
