--- a/study/math/数学.md
+++ b/study/math/数学.md
@@ -13,3 +13,6 @@
 論理である以上、重要なのは、順序立てて考えること。物事の筋道を考えること。
 
 数学を勉強しないと、数字を使った詐欺やデマに騙されやすい。
+
+数学は不自由の中に自由を見出す学問。
+膨大な公理や定理に、そもそも数という形が決まった中で無限の応用ができる。
