--- a/study/politics/violence/暴力を手放さない.md
+++ b/study/politics/violence/暴力を手放さない.md
@@ -1,3 +1,7 @@
+権力に逆らわないと正義とは言えない。
+
 権力に対抗できるのは常に暴力だ。暴力という選択肢を手放してはならない。
 
 そもそも話し合いが成立するのは暴力で同等の者同士の間だけ。
+
+「高齢者に選挙権を渡すな」とか「参政党に投票するような人に選挙権を渡すな」とかいう前に、直接暴力で襲撃するべき。このような主張ですら権利を求めないとできないのがそもそも恥ずかしいことだ。
