--- a/shared/achievement/problem/solving/問題解決.md
+++ b/shared/achievement/problem/solving/問題解決.md
@@ -52,3 +52,6 @@ https://qiita.com/jofuku/items/6420097fd5ff4c44c24d
 「面白かった」とか「美味しかった」と言った「評価」だけでは、改善点を見つけにくい。
 
 問題を解決することは、理想を実現することの一種だ。
+
+短期的な課題ばかりに目を向けて対策してしまうのはそもそも短期的で緊急の課題が多すぎるのが問題。これは普段からまず緊急の課題をちゃんと解決してないから。長期的な課題はまず短期的な課題が解決されないと始まらない。
+選挙なんかでも喫緊の課題が多いと考えていると、政党の公約も短期的なものが増える。
