--- a/shared/decision/知性.md
+++ b/shared/decision/知性.md
@@ -41,3 +41,5 @@ learning, thinking, training あたりは知性の関連だと思う。
 理解力
 
 同じものを違うように見る、違うものを同じように見るのは知性が低い。
+
+頭の悪い人がひろゆきの知識の深さとかを理解しないまま、ひろゆきのようなおちゃらけた振る舞いだけが同じ浅い人を賢いと思っちゃうの、完全にひろゆきの罪なんだよな。
