--- a/shared/education/tips/宗教.md
+++ b/shared/education/tips/宗教.md
@@ -29,3 +29,6 @@
 神への信仰は、無私や喜捨と深い関わりがある。
 
 単純に教育によって恩を売ってエンゲージメントを高める面もある。
+
+日本の宗教観の基礎になっているのは神道、仏教、儒教あたり。儒教は特に朱子学。
+三つとも世界や生命については言及してなくて、あと神もあまり考慮されない。どちらかというと人の意思を重視する。
