--- a/shared/government/democracy/民主主義.md
+++ b/shared/government/democracy/民主主義.md
@@ -59,3 +59,11 @@
 民主主義と多数決は違う。
 
 衆愚政治は、民衆が愚かだから起きるのではなくて、無能な政治家を見分けられないくらい愚かに「なった」から起きる。
+
+「民主主義というのは基本的にグダグダしたものなんだ。これでいいんだ。このグダグダがバッファとなって、自由を守ってくれているんだ。」（@ohashimasaki）
+
+民主主義にとって、投票率が高いのは絶対に良いこと。結果的に自分の支持政党が振るわなくても、民主主義を重視するなら一旦受け入れるべき。その上で民意を動かせるように意見を発信していく。
+
+無投票、無効票、白票は与党に投票したのと同じ。
+正確には、選挙結果が与党60%、野党40%だったとしたら、同じ割合で投票したのと同じ。
+「誰も信用できないから投票しない」と言って投票しない頭の悪い人は与党を信任している。
