--- a/shared/government/政治家.md
+++ b/shared/government/政治家.md
@@ -4,3 +4,6 @@
 責めるべきは無能を政治家にした投票者だ。
 
 政党や政治家を支持しても惚れ込むな。政治は預けるものではなくて監視するもの。盲目になってはいけない。
+
+政治家を否定するのに「嘘をついている」というのは証明しづらい。
+それよりも「人権を取り上げるって公言してて怖い」とか、明らかに証拠がある事実を感情に載せて伝えるほうがいい。
