--- a/shared/society/社交性.md
+++ b/shared/society/社交性.md
@@ -43,3 +43,8 @@ https://ja.wikipedia.org/wiki/%E7%A4%BE%E4%BC%9A%E6%8A%80%E8%83%BD
 もし本当に社交性が高い人なら、社交性が低い人とも付き合える。
 
 わがままというか、情や思いやりがなくて周りを気にかけないのは社交的には良くない。
+
+蟻なんかは放っといても集まって巣を運営していける。
+でも人間はそうではない。人間には蟻以下の社会性しかない。
+
+「なぜ政治が良くならないのか」というのは、人間に社会性がないせい。特に1億人とかの規模になると厳しい。そもそも同じ家族の中ですら人間同士で協力して平和に生きられない。
