--- a/shared/trust/intimacy/tips/否定しなくていいこと.md
+++ b/shared/trust/intimacy/tips/否定しなくていいこと.md
@@ -9,3 +9,8 @@
 自分にとってはそう思わないことでも一旦受け取るのが大事。「そうですね」とか「そうですか？詳しく聞かせてください」とか。
 
 親が馬鹿だとテレビのデマを否定するためにいちいち突っ込まないといけないので否定的になりやすいのかも。
+
+感情を否定するべきではないし、そもそも感情は事実なので否定できない。
+
+「参政党や神谷さんが好き」という感覚も否定しない。どんなにイカレてると思っても。
+好きは肯定しつつ、自分がそれを嫌いなところは伝えてもいい。食事の話と同じ。「えびは甲殻っぽい匂いが無理」と同じように、「うどんは戦後にできたとか主張してるの意味わからん」でいい。まぁ、その前に「私は神谷さん嫌いなんよなぁ。この話やめとく？」でワンクッション置くのもいい。
