--- a/shared/war/抑止力.md
+++ b/shared/war/抑止力.md
@@ -1,3 +1,5 @@
+核武装の目的は大量報復による抑止力であって、ドローンやミサイルが出てきた現代では効率が悪い。大量報復ならもっと効率のいい手段がたくさんある。
+
 武力は抑止力であるべきだ。
 
 武力は争いを止めるためにある。戦争の目的は、戦争を終えることだ。争いを求めてはならない。
