--- a/shared/engagement/popular/tips/男性にモテたい.md
+++ b/shared/engagement/popular/tips/男性にモテたい.md
@@ -3,3 +3,5 @@
 なんなら Good Mum でなくても別にいいし。まぁ、結婚するなら家庭的で子育てができる人の方がいいかもしれないけど、セックスしても男側は最悪逃げられるから、女性ほど重視してないと思う。
 
 子供や老人を性的に見る男性はちょっと特殊。
+
+「女には穴があるから、どんな女にも彼氏はできるので、彼氏がいること自体は「モテ」を担保しない。」（@Cryptobanker_Z）
