--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -202,6 +202,17 @@ BOさせた後がなんか弱い。何かないかな。
 
 中足の距離で中下段も強いし、ひたすら触ってゲージを削るのも強い。
 
+## 相手がBOした場合の攻め
+
+エレナで相手がBOした場合の利点
+
+- MK/2MPから弱グライドが連続ガードで+1になる
+- MK-HK/2HPから弱グライドに無敵技以外で割り込めない
+- LK/2MKがガードされて五分になる
+- MKをガードされてDIに投げで割り込めない
+- 2MP/DR MK/DR 2HPをガードされてDIに無敵技以外で割り込めない
+- DR 2LP/2LK/MP/HPガードから2MPに無敵技以外で割り込めない
+
 ## 守り
 
 エレナはコパン届かない距離が本当に弱い。技の発生が遅すぎる。MKは短い。
