--- a/shared/government/democracy/政策を評価する.md
+++ b/shared/government/democracy/政策を評価する.md
@@ -9,3 +9,6 @@
 国民が逃げ出すための長距離の移動手段が発達するほど、無茶な政策は使えなくなる。
 
 政策は、言っていることではなく、やったことを評価する。
+
+「たびたび言ってるけど、エンタメ関係者は基本的に再分配に賛成するしかないんですよな。格差社会では作品が売れない。どんな大富豪でも１か月に10万冊の漫画を読んだり、1,000本の映画を見たりすることは出来ないんで。庶民が広く裕福にならないと成立しない。」
+https://x.com/faketaoist/status/1923938270205051293
