--- a/shared/government/democracy/選挙.md
+++ b/shared/government/democracy/選挙.md
@@ -5,3 +5,11 @@
 「これまでにしてきたことを見てください」以外は無視していい。
 
 うんこの中からマシな臭いのうんこを選ぶのが選挙。それが嫌なら自分が出馬するしかない。
+
+誰にも投票しなかったとしても誰かは選ばれる。
+これは投票しなくても結局当選した人に投票するのと同じことだ。
+
+選挙で「当確」が出るのは統計的な計算によるので「99%で」みたいな確率が省略されている。まぁ、ほぼ確定だけど、指示者が朝と夜で相当偏るみたいなことでもなければある程度のサンプル数でわかる。
+
+ひろゆきの無効票、白票、無投票の解説
+https://youtube.com/shorts/YSz02nghgWo?si=QizE-f-v5S4iW0Is
