--- a/shared/voice/speaking/喋ること.md
+++ b/shared/voice/speaking/喋ること.md
@@ -14,3 +14,5 @@
 SpeakingはSingingの派生。言葉を喋るなら、どっちにしてもリズムが必要。ただ、メロディやハーモニーをそこまで重視しない。
 
 話が上手い人は歌も上手い人が多い。リズムや抑揚の取り方が共通している。ただ、音感が悪すぎるとその限りではない。
+
+人の話を聞く能力が低い人に囲まれて過ごすと、とにかく早口で喋る癖がつきやすい。
