--- a/shared/cooking/油.md
+++ b/shared/cooking/油.md
@@ -6,3 +6,5 @@
 香りの強い油でも加熱すると香りが弱くなるので、個性を出したいなら調理した後にかけるといい。
 
 菓子を作る時はバターを大量に使うので、無塩バターの方が味を調整しやすい。それ以外は有塩バターで十分。
+
+油はなんでも香りが強いものを使えばいいわけではない。あえてサラダ油を使うべき料理もある。
