--- a/shared/cooking/食感.md
+++ b/shared/cooking/食感.md
@@ -2,3 +2,6 @@
 天ぷらもホットケーキも、空気を含ませつつ、グルテンを作らないためにあまり混ぜない、温めないのが大事。
 
 クッキーやスコーンを作る前に生地を冷やすとグルテンが作用しにくくなる。
+
+各食材の食感が揃っていないとそちらに気を取られて味や香りに気が向かない。
+逆に食感に気を向けるならバラバラにする手もある。
