--- a/shared/engagement/tips/賞罰.md
+++ b/shared/engagement/tips/賞罰.md
@@ -30,3 +30,5 @@
 罪に重さはない。罰には重さがある。
 
 自分の手で人を殺すことよりも誰かに指示して 2 人で殺すほうが罪深い。罪が倍になっている。
+
+連座で処分する場合でも、まず本人を処分するべき。本人を処分できないならその繋がりで連座で処分される者も処分してはいけない。
