--- a/shared/human/being/孤独.md
+++ b/shared/human/being/孤独.md
@@ -9,3 +9,5 @@
 （https://www.univcoop.or.jp/parents/kyosai/parents_guide01.html）
 
 孤独であれば、どこからも影響を受けることも与えることも少ない。
+
+人は孤独だ。周りに誰がいても。孤独を抜け出せたように思えても錯覚でしかない。
