--- a/shared/story/telling/tips/商業作品.md
+++ b/shared/story/telling/tips/商業作品.md
@@ -8,3 +8,8 @@
 ビジネスや仕事、誰かが価値を感じるというのは承認のレベルなので、その前に描こうと思ったものを描けるようにならないとそもそも読者が読みたいものも描けない。
 
 読者はタイトルを見て読みにきているので、その期待から外れすぎると離れていく可能性が高い。ただ、テーマとしては読者の期待から外れないようにしつつ、意外性もないとつまらない。
+
+「プロフェッショナルの世界で自分の作品にどれだけ価値があるか測りたいときって
+自分が今一番会いたくない人に提供するイメージを抱きながら作ると良いものができるんですって
+強制的に自分の弱点と向き合えるから」
+『フェルマーの料理』
