--- a/shared/thinking/tips/批判的思考.md
+++ b/shared/thinking/tips/批判的思考.md
@@ -17,3 +17,5 @@
 ネガティブさは自分で持つべきで、他人のネガティブな言葉は無視するべき。
 
 他人の意見は取り入れるべきだが、批判は聞かなくていい。ポジティブな意見に沿って、評価が高いことをより強化する。
+
+「しないといけない」という言葉は便利だけど、もっと具体的に、それをしないとどうなるか、を考えられる。例えば「チョコをテンパリングしないと口当たりが悪い」とか。
