--- a/study/politics/violence/暴力.md
+++ b/study/politics/violence/暴力.md
@@ -24,3 +24,6 @@
 「正論は暴力」というのは主語が小さすぎる。そもそも受け手が気に食わないことは全て暴力だ。
 
 暴力を振るうならそれが権力になるように正義の味方として振る舞う必要がある。
+
+英語のViolenceは暴力と少し違う。殴ること。物理的な面が強い。
+日本人だったら言葉で傷つけるのも暴力という。
