--- a/shared/devotion/没頭.md
+++ b/shared/devotion/没頭.md
@@ -37,3 +37,5 @@ entertainment や engagement は没頭の筆頭。喜びと楽しみ。
 周囲に気を配るだけの余裕を持ってしまえば、没頭しているとは言えない。
 
 進む方向がわからないと没頭するのは難しい。
+
+漫画の主人公とか異性との距離感がおかしいキャラがいるけど、それは付随的なもの。どちらかというと、余計なことに気が向かないくらい別のことに夢中になっている。
