--- a/shared/art/技術.md
+++ b/shared/art/技術.md
@@ -142,3 +142,6 @@ engineeringは理論的。
 
 本当に卓越した技術は作品自体に需要がなくても技術を動画にしたりすると需要がある。
 あとは単純に手間がかかって普通はやらないことをするとか、古い方法をあえてするとかもエンタメ的には需要がある。
+
+初めからなんでもできるのを求めるとキリがないので、まずはやるべきことを絞る。
+求人でもそうだし、自分の訓練でもそう。
