--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -769,3 +769,6 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 ビジネスは生活費を稼ぐのが目的ではない。生活費を稼ぐのはビジネスを続ける手段。
 
 高くても買う人の気持ちがわからないとニッチなビジネスはできない。
+
+興味関心の範囲が狭いとビジネス的に良くない。欲しいものがない。
+ただ、生活できてるならべつに求めるものも少ないし悪くない。
