--- a/shared/collaboration/organization/組織の崩壊.md
+++ b/shared/collaboration/organization/組織の崩壊.md
@@ -1,1 +1,3 @@
 [【経営者必見】組織崩壊の予兆を捉える 5つのステップ - YouTube](https://www.youtube.com/watch?v=7BQ02H9Uuzc)
+
+すでに崩壊しかかっている組織を建て直すのは難しい。建物と同じように、変革の負担に耐えられずに崩壊が進む。一度崩して新たに建てることも検討しないといけない。それができないならまず崩壊しないように支えを入れないといけない。
