--- a/shared/communication/channels/talk/つまらない話.md
+++ b/shared/communication/channels/talk/つまらない話.md
@@ -6,3 +6,8 @@ https://www.youtube.com/watch?v=OS5svE2jtyk
 話が物足りないと思ったら、聞き手が深掘りすればいい。
 
 わからないとつまらない。
+
+つまらない話の特徴はやっぱり解像度が低いところだと思う。
+怪談みたいに、聞き手がその場にいたかと思うくらい詳細な描写がまず基本。
+
+まぁ、世の中の人のほとんどはつまらない話しかしないから、あんま自分の話がつまらないとか気にしなくてもいい。
