--- a/shared/cooking/recipes/牛乳プリンを作る.md
+++ b/shared/cooking/recipes/牛乳プリンを作る.md
@@ -20,4 +20,7 @@
 
 森永の粉ゼラチンが1袋5gなので作りやすい分量。
 
-牛乳プリンに生クリームとバニラが入っているとブランマンジュ。
+パンナコッタとほぼ同じ。
+卵黄を入れるとババロアになる。
+泡立てた卵白（メレンゲ）を入れるとムースになる。
+生クリームとバニラを入れるとブランマンジュになる。
