--- a/shared/devotion/没頭.md
+++ b/shared/devotion/没頭.md
@@ -39,3 +39,5 @@ entertainment や engagement は没頭の筆頭。喜びと楽しみ。
 進む方向がわからないと没頭するのは難しい。
 
 漫画の主人公とか異性との距離感がおかしいキャラがいるけど、それは付随的なもの。どちらかというと、余計なことに気が向かないくらい別のことに夢中になっている。
+
+午前中と19-21時は人間が特に元気な時間。集中しやすい。
