--- a/shared/society/悪意を見出さない.md
+++ b/shared/society/悪意を見出さない.md
@@ -31,3 +31,6 @@ https://ja.wikipedia.org/wiki/%E3%83%8F%E3%83%B3%E3%83%AD%E3%83%B3%E3%81%AE%E5%8
 「この世には悪意が溢れている」と考えるのは間違い。
 嫌いな人にそこまで興味がある人はあまりいない。
 むしろ好きな人にうまく接することができない人で溢れている。
+
+カルトの信者も基本的にはまじでみんな善人しかいないと思っていい。みんなそれぞれの方法で相手を幸せにしようと思っている。世の中には思ったほど悪意が蔓延っていない。蔓延っているのは無能。ただただ頭が悪くてやり方が間違ってるだけ。
+まぁ、悪意がなくても無能は同じように切り捨てないといけない。
