--- a/study/politics/政治.md
+++ b/study/politics/政治.md
@@ -100,3 +100,5 @@ business は交換条件、取引による政治。
 戦争せずに競合を解消するのが政治。
 
 結局、政治や社会の問題の大半は人間の頭が悪すぎるところに端を発している。
+
+「人を抱擁し、人が集まってくるような人でなければ、政党の大幹事長にはなり難いのであります。」（田中角栄）
