--- a/shared/achievement/objective/目標を立てる.md
+++ b/shared/achievement/objective/目標を立てる.md
@@ -18,3 +18,7 @@
 
 目標を立てる前にまず振り返り。Good/Badから。
 あとビジョンから順に組み立てる。どんなフィーチャーを持たせたいか。
+
+自分や身近な人が死ぬことを定期的に思い返すべき。
+それまでにやりたいことがあればすぐにやる。
+目標を立てる前に、まずリアルな死を思い描けるようにする。
