--- a/shared/government/democracy/民主主義.md
+++ b/shared/government/democracy/民主主義.md
@@ -67,3 +67,5 @@
 無投票、無効票、白票は与党に投票したのと同じ。
 正確には、選挙結果が与党60%、野党40%だったとしたら、同じ割合で投票したのと同じ。
 「誰も信用できないから投票しない」と言って投票しない頭の悪い人は与党を信任している。
+
+あらゆる人の意見が少数意見として潰されるのが民主主義の副作用。特に少数の専門家の意見を取り込みにくいのは仕組みで解決しないといけない。議会とは別に専門家の意見聴衆会や勉強会があったりする。
