--- a/shared/computer/science/machine/learning/訓練.md
+++ b/shared/computer/science/machine/learning/訓練.md
@@ -5,3 +5,7 @@
 既存のモデルにデータを追加して、新しいモデルを作るのは Fine-tuning と呼ばれる。
 
 教師あり学習、教師なし学習、に大きく分けられる。
+
+試練よりも早く慣れるための正しい訓練は試練よりもしんどい。でも効率的。
+
+訓練は密度が大事。試練本番よりも高い密度で上手くならないと訓練の意味がない。
