--- a/shared/collaboration/協力.md
+++ b/shared/collaboration/協力.md
@@ -31,3 +31,5 @@ collaborationはengagementと関わる部分が大きい。
 関係ない仕事を押し付けられそうになったら「そこに置いといてください」と返して無視すればいい。
 
 協力していても、個の利益や成長も追わないと置いていかれる。
+
+敵の敵でも味方にはなるとは限らないけど、客や餌にはなる。利用できる。
