--- a/shared/decision/information/情報.md
+++ b/shared/decision/information/情報.md
@@ -181,3 +181,5 @@ communication, decision, observation あたりは関連がある。
 
 物理的には複雑さと「情報」がほぼ同じもの。
 https://share.google/qJIl8gO83xEZQZjbk
+
+頭の悪い人が情報を持っていてもどうせまともな判断はできない。まずは自分の愚かさを理解するだけの頭が必要だけどそれもない。
