--- a/shared/leisure/examples/travel/jp/東京.md
+++ b/shared/leisure/examples/travel/jp/東京.md
@@ -16,3 +16,5 @@ https://www.tokyo-zoo.net/zoo/ino/hanagoyomi/index.html
 旅行するにはやっぱ西東京に住むと遠い。一回新宿や東京に出ないと始まらない。一応八王子経由で新横浜には出られるけど、それも1時間はかかるし。
 
 多摩動物公園で園内バスに乗れるならオランウータンの前までバスで行くと楽。
+
+東京競馬場には公園もフードコートもある。
