--- a/games/Street-Fighter/Six/theory/守りの選択肢.md
+++ b/games/Street-Fighter/Six/theory/守りの選択肢.md
@@ -56,6 +56,12 @@
 
 攻め側の有利フレームが少ない状況では、バクステにしっかり差し込むのが大事。
 
+## 最速小パン
+
+- 遅らせ打撃に割り込める
+- シミーを足止めできる
+- 攻撃が重なっていると負ける
+
 ## 起き上がりジャストパリィ
 
 起き上がりにジャストでパリィを出す。
