--- a/games/Street-Fighter/Six/theory/攻めの基本.md
+++ b/games/Street-Fighter/Six/theory/攻めの基本.md
@@ -28,6 +28,8 @@
 2. 打撃
 3. 後退して差し返し（シミー）
 
+上級者になると、遅らせ打撃（グラ潰し）がここに加わる。特に端。中央では投げ抜けを捨てることもある。
+
 ## その他
 
 攻めの基本は、暴れを潰すこと、投げで崩すこと、投げ抜けにリスクを与えること、無敵技にリスクを与えること。
