--- a/games/Street-Fighter/Six/practice/上級者向け.md
+++ b/games/Street-Fighter/Six/practice/上級者向け.md
@@ -23,3 +23,13 @@
 - スタンさせたら前歩きでゲージ回復を待つ
 
 https://youtu.be/4CqD7mLV8eo?si=vQ2zfX13qKo2ClN5
+
+初心者と上級者だけに多い行動
+https://youtu.be/Jmtb4pmnTXo?si=twxbAboACJue6zXN
+
+- SA暴れ（リーサルやBOのタイミングを見極めて）
+- 最速コパン暴れ（攻めの遅らせ行動一点読み）
+- 最速垂直ジャンプ（攻めの遅らせグラップ一点読み）
+- BO（SAがあって、Dがもう1本しかないとき）
+
+行動としては同じなんだけど、上級者はそれが通る確率が高いのを見極めている。
