--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -45,6 +45,10 @@
 
 守りの基本は無敵技と中足ラッシュの逆択。無理やり割り込む。中足ラッシュはガードされても投げや連続ガードから攻めに行ける。
 
+## 一点読みではリターンを狙う
+
+一点読みするなら、リターンを取らないと意味がない。
+
 ## ラグ対策
 
 ラグいとガードして割り込むのが難しくなるので、無敵技とジャンプでできるだけ凌いだ方がいいかも。グラップも無理。
