--- a/games/shogi/将棋.md
+++ b/games/shogi/将棋.md
@@ -13,3 +13,5 @@ AIの将棋はもはや薄い囲いから先に入玉してそのまま押しつ
 角を当てやすくて、攻めやすく守りやすいのがお互いの4筋と6筋。戦いになりやすい。右四間飛車なんかは分かりやすく4筋を攻めてる。
 
 女性の棋士がいないというか、女性が将棋で弱いのは母数が少ないから。格ゲーもそうだった。
+
+将棋の解説で「これも一局の将棋」と言ったときは「ほぼ互角」ということ。
