--- a/shared/execution/planning/project/management/プロジェクトリーダー.md
+++ b/shared/execution/planning/project/management/プロジェクトリーダー.md
@@ -7,3 +7,6 @@ PL といっても PM やメンバーの裁量によって役割が変わる。
 
 特に PL の立場だと PM の範囲によって、どれくらい技術寄りになるかが決まる。
 具体的な要件定義をしたり、機能を提案したり選別したりすることもあるし、それらはせずに技術的な仕様の実現に集中することもある。
+
+個人がプロトタイプを作って、それをプロジェクト、作った人をリーダーにする。
+この方法の場合、個人が開発するための20%ルールがあると便利。というかそうしないと後で青色LEDみたいに賠償させられる可能性がある。
