--- a/shared/government/democracy/民主主義.md
+++ b/shared/government/democracy/民主主義.md
@@ -69,3 +69,9 @@
 「誰も信用できないから投票しない」と言って投票しない頭の悪い人は与党を信任している。
 
 あらゆる人の意見が少数意見として潰されるのが民主主義の副作用。特に少数の専門家の意見を取り込みにくいのは仕組みで解決しないといけない。議会とは別に専門家の意見聴衆会や勉強会があったりする。
+
+政党が乱立して何も立法が進まないのもそれはそれでいい。国民の間でも意見が分かれていたら、何もしないのも政治のあるべき姿だ。
+
+ポピュリズムというのは広く国民の意見を汲み上げる褒め言葉でしかない。
+
+2025年の参院選は、自公や立民のようにごく少数の偏った意見だけ取り込んだポピュリズムぶった政党が否定されて、真に国民の大多数が望む政党が選ばれた選挙だった。
