--- a/shared/collaboration/organization/hierarchy/上司の仕事.md
+++ b/shared/collaboration/organization/hierarchy/上司の仕事.md
@@ -85,3 +85,6 @@
 
 上司が忙しいなら、もっと部下に任せないといけない。
 代わりが効かない経営者でもないのに忙しい上司は無能。
+
+上司は普段動かなくても部下だけで仕事を回せるようにしないといけない。その上で、緊急時だけは手を出す。
+上司の仕事は成果を出すことで、特に楽にそれができるほど優秀。普段暇で、緊急事態も少ないのが最良。
