--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -28,24 +28,15 @@
 
 6HPのヒット確認と一緒に練習するといい。
 
-## 弱攻撃のヒット確認と弱スピン、SA3の起き攻め
-
-（ダウンリバーサル: 4F技）
-
-- 2LP/2LK, 2LP, 弱スピン
-  - SA3
-  - DR 投げ
-
 ## 弱攻撃のヒット確認
 
-- 2LP/2LK, 2LP, 弱スピン-弱リンク
-  - 2LK, 2LP, ...
+- 2LP/2LK, 2LP, 弱スピン-弱リンク, ガード
 - 2LP/2LK(g), 2LP, ガード
 
 ## 弱攻撃とSマレットのヒット確認
 
 - 2LP/2LK, 2LP, 弱スピン-弱リンク
-  - Sマレット, 2LP 2回, 弱スピン-弱リンク, ガード
+  - Sマレット, 2LP 2回, 弱スピン-Sマレット, ...
   - Sマレット(g)
     - 前投げ, ステップ, 後退
     - 後退
@@ -345,3 +336,11 @@ DR 6MPは相打ちでもコンボになる。
 
 - 2LP, LK, 強昇竜
 - 2LP, LK, CR 2LP, 2HP, 強スピン, ...
+
+## 弱攻撃のヒット確認と弱スピン、SA3の起き攻め
+
+（ダウンリバーサル: 4F技）
+
+- 2LP/2LK, 2LP, 弱スピン
+  - SA3
+  - DR 投げ
