--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -125,8 +125,8 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 （反撃設定 > ダウンリバーサル: 4F技）
 
 - 2LP/2LK, 2LP, 弱スピン
-  - SA3
-  - DR 投げ: 目押し
+  - DR 6MP, MK-HK, 強ホーン
+  - DR 2LK, MK-HK, 強ホーン
 - 2LP/2LK(g), 2LP, ガード
 
 目押しの起き攻めはギリギリで難しい。
