--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -439,8 +439,8 @@ MKは近くないと当たらない。
 - {端} HP-HP, ODホーン, SA1, 強昇竜: 3880
 - HP-HP, SA1, 強昇竜: 3560
 - HP-HP, SA1, SA1, 強昇竜: 3860
-- HP-HP, SA2: 3840 (3160)
-- HP-HP, ODホーン, SA2: 4240
+- HP-HP, SA2: 3840 (h:3160)
+- HP-HP, ODホーン, SA2: 4240 (h:3730)
 - HP-HP, ODホーン, SA3: 4560
 
 昇竜やSA1は近くないと届かない。
