--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -125,8 +125,8 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 （反撃設定 > ダウンリバーサル: 4F技）
 
 - 2LP/2LK, 2LP, 弱スピン
-  - DR 6MP, MK-HK, 強ホーン
-  - DR 2LK, MK-HK, 強ホーン
+  - DR 6MP, MK-HK, 強ホーン, DR 6MK, ...
+  - DR 2LK, MK-HK, 強ホーン, DR 2LK, ...
 - 2LP/2LK(g), 2LP, ガード
 
 目押しの起き攻めはギリギリで難しい。
@@ -264,14 +264,20 @@ DR 6MPは相打ちでもコンボになる。
 
 ## SA2でダメージを伸ばすコンボ
 
+- 2LP/2LK, 2LP, CR 2LP, 2HP, 強スピン, SA2
 - 2MP, CR MK, 2HP, 強スピン, SA2
+- MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, SA2
+- HP-HP, ODホーン, SA2
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, SA2
 - DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, SA2
 - DI(壁), 2MP, 中スピン-Sハーベスト, SA2
 
 ## SA3でダメージを伸ばすコンボ
 
+- 2LP/2LK, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
+- MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3
+- HP-HP, ODホーン, SA3
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3
 - DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 中ホーン, SA3
 - DI(壁), 2MP, 中スピン-Sハーベスト, 中ホーン, SA3
