--- a/shared/business/corporation/会社.md
+++ b/shared/business/corporation/会社.md
@@ -73,3 +73,5 @@ https://toyokeizai.net/articles/-/774070
 大きなオフィスと優れたサポートがあるとしっかりした会社だと思う。
 
 社員の待遇が悪い＝給料を上げるだけの価値を生み出せていない会社は、給料以外を求めて働いてもつまらない。つまらない上司や同僚、仕事、仕組みしかない。
+
+入社時と昇進時に必ず会社から社員に説明責任を負わせる。まず20年の配当金、売上や利益、人件費の中央値の伸び、とか形式は固定で。
