--- a/shared/care/配慮.md
+++ b/shared/care/配慮.md
@@ -170,3 +170,5 @@ Careは単に失われないようにするだけで、Entertainmentだけでは
 疲れても他人に優しくできるように、無意識で配慮できるようにする。
 
 畳のふちを踏まないとか、扉の足を踏まないとかも、そういう気遣いを見せること自体が重要。それ自体に意味がなくてもいい。
+
+「気遣いできる人ほど悪いところにも気づくので人が嫌い」説もある。
