--- a/shared/cooking/recipes/スコーン.md
+++ b/shared/cooking/recipes/スコーン.md
@@ -1,4 +1,5 @@
 バターはレンジで溶かしてしまってもいい、牛乳と混ぜてから粉と混ぜて、冷やす。
+マーガリンの方が楽ではある。
 
 ある程度粉っぽさが残っていたほうがいい。
 粉は水分を含ませるだけで、綺麗に混ぜなくていい。
@@ -21,3 +22,21 @@ https://youtube.com/watch?v=xJ-Ntt66gx4&si=iLOYvhz85T3SRySt
 スコーンなどサクサクにしたいものはバターと粉を先に混ぜて粉をまとわせてから砂糖を入れる。バターと砂糖が直接触れると水分が出てべちゃっとなりやすい。
 あと生地ができたら冷蔵庫で一旦冷やすのも効果がある。
 https://youtu.be/LofcIMc1AZQ?si=wQZQJmHbOWGnwaiq
+
+スコーンは卵なしで砂糖の量を増やすと柔らかくなって潰れやすい。
+
+- 薄力粉: 100g
+- ベーキングパウダー: 5g
+- 砂糖: 10g
+- 無塩バター: 35g
+- 牛乳: 40g
+- 塩: 0.5g
+
+1. 薄力粉とベーキングパウダーをよく混ぜる
+2. バターを加えて、全体がサラサラになるまでバターを細かくする
+3. 砂糖、塩を加えて混ぜる
+4. 牛乳を混ぜて、水っぽさがなくなるまでざっくり混ぜる
+5. ラップに包んで全体を押し固める
+6. 冷蔵庫で30分ほど寝かせる
+7. 2cm程度の厚さに広げて切り分け、クッキングシートの上に並べる
+8. 180℃に予熱したオーブンで18分ほど焼く
