--- a/shared/home/tips/電気代を抑える.md
+++ b/shared/home/tips/電気代を抑える.md
@@ -12,3 +12,5 @@
 
 PCなどは点けたり消したりすると故障しやすくなるし、最近はレストモードやスリープモードを使うように最適化されているので電源を落とさない方がいい。そもそも待機中の電気代も大したことないし。
 ただ、モニターは要らなかったら消した方がいい。
+
+LEDの電灯は電気代も安いし寿命も長いので、使えるなら使わない理由がない。
