--- a/shared/lifestyle/clothing/服.md
+++ b/shared/lifestyle/clothing/服.md
@@ -52,3 +52,6 @@
 近所に出かけるくらいならジャージが便利。洗いやすいし、暑すぎないから春秋でも着れるし。
 
 春物と秋物を分けるかどうか。
+
+湿度が低いけど日差しが熱いところは薄い布で肌を隠す。イタリアとか中東とか。
+対して日本みたいに湿度が高いところは薄着。肌を隠すとジメジメして暑いし。日差しが熱かったら日傘。
