--- a/shared/society/社会.md
+++ b/shared/society/社会.md
@@ -91,3 +91,5 @@ businessやcommunityも社会の一部。
 人間には社会性がない。必要に迫られないと、社会を作ろうとしない。
 
 社会はコミュニティとは限らない。対立もまた社会。
+
+社会にとって別にいらない人を生かす必要があるかどうか、あるいはその余裕があるかどうか、という問題。
