--- a/shared/government/政治家.md
+++ b/shared/government/政治家.md
@@ -7,3 +7,5 @@
 
 政治家を否定するのに「嘘をついている」というのは証明しづらい。
 それよりも「人権を取り上げるって公言してて怖い」とか、明らかに証拠がある事実を感情に載せて伝えるほうがいい。
+
+政治家が支持者の意見ばかり気にしていると、支持者の発想の中でしか発想できない。
