--- a/shared/government/税.md
+++ b/shared/government/税.md
@@ -1,3 +1,5 @@
 税金の大きな役割は二つ。
 一つ、貧富の格差を抑えること。金持ちから金を回収して、貧しい人に回す。これは治安維持の意味もある。
 一つ、市場に流れすぎた通貨を回収すること。金の流れを堰き止めて、インフラを抑える。
+
+金持ちが消費税がかかる商品に使う額なんて大したことがないので、脱税されないって利点も大したことがない。
