--- a/shared/communication/frameworks/assertion/根拠.md
+++ b/shared/communication/frameworks/assertion/根拠.md
@@ -127,3 +127,7 @@ explanation も参照。
 根拠のない主張は感想でしかない。批判も同じ。ただの感想には価値がない。
 
 主張がおかしいと思っても、その思考過程が論理的でないとは限らない。論理的に考えてるけど、前提とする情報の違いによって主張が異なっている場合もある。野生の思考。
+
+根拠のない歴史を語る人がいたら、その周辺の歴史観についても聞いてみる。
+
+根拠を示すより、相手の根拠を追求する。
