--- a/shared/music/vocal/training/tips/キーを変えて歌う.md
+++ b/shared/music/vocal/training/tips/キーを変えて歌う.md
@@ -57,3 +57,8 @@ https://note.com/atano/n/n3c01c44d8bae
 キーが変わると違うメロディに聞こえる人と、そうでない人がいる。
 
 明るい曲は-6で歌っても伴奏は+6にした方が合うときがある。
+
+キー変更して聞いてないなら±3か±5が合わせやすい。
+
+暗めの曲は原キーでオク下でもべつにいい。
+明るめの曲でオク下にすると低すぎる。
