--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -304,3 +304,5 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 『ガールクラッシュ』
 
 クリエイティブなものが好きな人間としては、作者と作品を分けて考えられない知性のない人間が増えるのは困る。良い作品が無駄に潰されてしまう。
+
+「そもそもだ！面白いと思ってるもんがつまらん奴に何をやらせてもつまらんだろ！」（『その着せ替え人形は恋をする』）
