--- a/games/Street-Fighter/Six/practice/練習メニュー.md
+++ b/games/Street-Fighter/Six/practice/練習メニュー.md
@@ -82,6 +82,16 @@ https://x.com/lllmokelll/status/1843146450857013437
 CPUレベル7のケンがいい感じにジャンプやラッシュ、突進技、インパクト、波動拳を出してくれるので対応練習にちょうどいい。
 https://youtu.be/gbQKzaQxC7A?si=jio0gSb1RWeyJsWf
 
+ジャンプして、
+
+- インパクト
+- ラッシュ投げ
+- ラッシュ攻撃
+- ジャンプ攻撃
+- 飛び道具
+
+でレコードして対応する練習。
+
 ## 端の守りの練習
 
 （ダミー設定 > 相手の操作: CPU）
