--- a/games/Street-Fighter/状況判断.md
+++ b/games/Street-Fighter/状況判断.md
@@ -7,3 +7,5 @@
 
 有利フレームを取れば相手と同じタイミングでボタンを押しても先に動ける。
 一方的に攻撃判定が出ていれば勝つ。
+
+完全な「見てから」とは別に、一点読みで動いた確認の「見てから」もある。対応自体は決めておいて、相手が何をしてもそれを選ぶからこそ全てに対応する「見てから」よりも早く反応できる。
