--- a/shared/business/corporation/会社と社員.md
+++ b/shared/business/corporation/会社と社員.md
@@ -35,3 +35,9 @@
 会社は、社員を動かして、会社の目的を達成したい。
 
 辞めても他の働き先が見つかる会社、社員を育てられる会社を目指すべき。
+
+社員第一、顧客第二とするべき。顧客より社員の方が替えが効かない。
+その上で、会社としては顧客とは別に社会貢献を見据える。そのために必要なのは悪い顧客よりも良い社員。
+
+「社員第一、顧客第二」
+（サウスウエスト航空の経営方針）
