--- a/shared/change/変化.md
+++ b/shared/change/変化.md
@@ -41,3 +41,5 @@ care, love, work の文脈は、良い状態を維持すること、変化する
 https://logmi.jp/tech/articles/330391
 
 理解していないものを破壊してはならない。
+
+世界や社会を変えようとすると失敗も多くある。それはそれで失敗しすぎると絶望することになる。ちょっとした変化を目指して、成功体験を積み重ねないといけない。その上で簡単すぎても飽きるので、適度に失敗するくらいの難易度がちょうどいい。
