--- a/shared/government/税.md
+++ b/shared/government/税.md
@@ -3,3 +3,16 @@
 一つ、市場に流れすぎた通貨を回収すること。金の流れを堰き止めて、インフラを抑える。
 
 金持ちが消費税がかかる商品に使う額なんて大したことがないので、脱税されないって利点も大したことがない。
+
+消費税などの税金が載った物価で最低限の生活費に関しては所得税や社保の控除対象にするべき。控除で引かれるなら消費税が高くても生活は保障される。
+
+消費税は脱税する余地がないけど、間接税なので店側で着服することも出来なくはない。
+
+税は、市場に流れすぎた財（特に通貨）を回収して、インフレを抑える効果がある。
+
+税があるから、通貨を大量に作っていても価値を保てる。
+
+税が必要なのは、供給の多すぎる商品を買い戻したり潰したりする必要があるのと同じ。
+通貨は商品の代わりでしかないが、商品と同じように価値が変動する。
+
+外国人にかからない相続税などの税金は購入時にかけないといけない。
