--- a/shared/hope/希望.md
+++ b/shared/hope/希望.md
@@ -34,3 +34,15 @@
 生きる希望というのは、自分が何をしたいか。何もすることがなくなると絶望になる。
 
 Hope, 希望と絶望
+
+人間は希望や情熱がまず中心にないといけない。技術や論理はそれを叶えるための手段。
+
+自分の外に希望を見出す。
+
+絶望しないためには、外向きに世界や社会を変化させようとする願望を持った方がいい。
+
+希望は外向きの願望。内向きにばかり希望を見出そうとしてもすぐにやることがなくなって絶望してしまう。
+
+自分の心だけを満たそうとすると世界は狭くなって、簡単に満たされてしまう。それではつまらない。
+
+哲学は個人的な遊びでしかない。関心が狭くなりやすい。
