--- a/shared/human/being/well/趣味.md
+++ b/shared/human/being/well/趣味.md
@@ -10,3 +10,6 @@
 日本語の「趣味」は自分のための楽しみという感じ。
 
 趣味は生産性がないことも多いけど、他人の批判ばっかりで価値がマイナスになるよりはマシ。「価値がゼロ」は「価値がマイナス」よりも良い。
+
+趣味でも格ゲーとか勝ち負けをやってる人は趣味をビジネスにして優劣がついても気にならない。
+逆に、趣味で優劣がつくのが嫌なら誰にも公開しないとか、親しい人にだけ公開するとか、隠した方がいい。
