--- a/shared/human/body/怪我.md
+++ b/shared/human/body/怪我.md
@@ -1,3 +1,5 @@
 体の故障。
 
 膝と腰の関節は痛めやすいので、怪我に注意。特に重いものを持ち上げるときはできるだけ腰に近いところまで持ってきて、後ろに体重をかける形で真っ直ぐに上げる。
+
+怪我をしたら傷口を風に当てる。破傷風は偏性嫌気性で、通常の酸素濃度の空気に晒されるだけで死滅する。
