--- a/shared/trust/intimacy/スキンシップ.md
+++ b/shared/trust/intimacy/スキンシップ.md
@@ -17,3 +17,5 @@
 
 スキンシップしてから「ごめん、いやだった？」って確認するとか。
 どこまで許容されるかは悩ましいところ。
+
+スキンシップの一番ハードルが低いのは、隣に座って肩や膝を軽く当てること。すぐ離れるようなら相手はそれ以上親しくなりたくないと思っている。脈なし。
