--- a/shared/execution/planning/task/着手.md
+++ b/shared/execution/planning/task/着手.md
@@ -8,3 +8,6 @@ Readyになっていないタスクをイテレーションに入れるべきで
 
 本当はReadyになってないタスクをReadyにすると途中で相談しないといけなくなる。最初に相談してからReadyにして、途中で相談する回数を減らす。それでも漏れはあるけど、減らすのが大事。
 特に、複数人で仕事して、しかも意思決定にラグがある場合。一人なら自分で意思決定すればいいけど、チームでは意思決定に時間がかかる。待ち時間は減らしたい。
+
+> Q. ものづくりで一番大事なことは？
+> A. 着手。
