--- a/shared/learning/学習.md
+++ b/shared/learning/学習.md
@@ -313,3 +313,7 @@ OODA ループが学習の基本。
 （『シンデレラグレイ』）
 
 学習で目指すところも成功。
+
+そんなことして意味あんの？ってところもやり込むのが遊びとしてのゲームの楽しみ方。
+
+「まるで気ままな寄り道のような、道無き道を行くような、ガラクタの山から宝を見つけ出すような」（『対ありでした。』）
