--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -510,6 +510,17 @@ MKは近くないと当たらない。
 高めで足先を当てるようにすると高めに上がって追撃できる。
 状況判断が難しい。
 
+## {近} J.HK
+
+- J.HK, 2HP, 強スピン, 中ホーン: 3280
+- J.HK, 2HP, 強スピン, 弱ホーン, 強昇竜: 3780
+- J.HK, 2HP, 強スピン, 弱ホーン, OD昇竜: 3860
+- {端} J.HK, 2HP, 強スピン, SA1, 強昇竜: 3880
+- J.HK, 2HP, 強スピン, SA2: 4240
+- J.HK, 2HP, 強スピン, SA3: 4560
+- {端} J.HK, 2HP, 強スピン, 中ホーン, SA3: 5280
+- J.HK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 5412
+
 ## 強スピン(pc)
 
 - 強スピン(pc)-Sハーベスト, SA1, 強昇竜: 4220
@@ -635,7 +646,7 @@ ODホーンルートは端近くで当たって高く上がらないと強昇竜
 - DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 5240
 - DI(pc), ステップ, HP-HP, DR 2HP, 弱スピン-Sハーベスト, 中ホーン, SA3: 5562
 
-## DI(壁)
+## {端} DI(壁)
 
 - DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜: 3390
 - DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜: 3380
@@ -648,18 +659,18 @@ ODホーンルートは端近くで当たって高く上がらないと強昇竜
 - DI(壁), 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 5080
 - DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3: 5402
 
-## DI(g)(壁)
+## {端} DI(g)(壁)
 
-- DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜: 2888
-- DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜: 2832
-- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 中昇竜: 3178
-- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, OD昇竜: 3284
-- DI(壁), 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 3104
-- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, SA1, 強昇竜: 3236
-- DI(壁), 2MP, 中スピン-Sハーベスト, SA2: 3360
-- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, SA2: 3634
-- DI(壁), 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 4464
-- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3: 4922
+- DI(g)(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜: 2888
+- DI(g)(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜: 2832
+- DI(g)(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 中昇竜: 3178
+- DI(g)(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, OD昇竜: 3284
+- DI(g)(壁), 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 3104
+- DI(g)(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, SA1, 強昇竜: 3236
+- DI(g)(壁), 2MP, 中スピン-Sハーベスト, SA2: 3360
+- DI(g)(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, SA2: 3634
+- DI(g)(壁), 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 4464
+- DI(g)(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3: 4922
 
 ## SA1
 
