--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -350,3 +350,8 @@ DR 6MPは相打ちでもコンボになる。
 - 2LP/2LK, 2LP, 弱スピン
   - SA3
   - DR 投げ
+
+## 近距離のジャンプ攻撃
+
+- {端} J.HK, 2HP, 強スピン, 弱ホーン, 強昇竜
+- {端} J.HK, 2HP, 強スピン, 中ホーン, SA3
