--- a/shared/game/theory/差し合い.md
+++ b/shared/game/theory/差し合い.md
@@ -14,3 +14,5 @@
 
 差し合いは前に出るというよりも端に追い込まれないようにする。端に追い込まれないなら上がるよりも下がる方が強い。自然にガードできるし、差し合いも狙いやすい。
 ただ、あえて間合いギリギリを出入りして誘うのも手ではある。リスクを取って差し返しを狙う。
+
+相手の動きに合わせるのではなく、相手の動きを誘う。釣る。フェイントで。
