--- a/games/Street-Fighter/飛び道具の考え方.md
+++ b/games/Street-Fighter/飛び道具の考え方.md
@@ -124,3 +124,5 @@ https://youtube.com/watch?v=r4pAE0sdk8s&si=Yex61e6pyGxq_Vxf
 
 飛び道具使うのが苦手なら、差し合いがそもそも苦手なのかも。
 飛び道具は差し合いの延長。判定がクソ強くて隙の大きい長い技でしかない。
+
+安全波動はジャンプ攻撃ができないので、それを利用してこっちは弾抜けを狙ったり、垂直で避けて弾を残したりする読み合いが必要。
