--- a/games/Street-Fighter/Six/characters/Ryu/リュウの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの立ち回り.md
@@ -24,6 +24,8 @@
 有利を取れる大技で固めてドライブゲージを削る動きが特徴的。
 とりあえずバーンアウトを目指すのは一つの手だ。
 
+リュウは端の密着中パンから3200減るので、多少リスクを取って密着で起き攻めするのも強い。シミーはバクステで。
+
 ## バーンアウトした相手への攻め
 
 LP, 弱波掌: 連続ガードで+1
