--- a/shared/love/嫌い.md
+++ b/shared/love/嫌い.md
@@ -7,3 +7,8 @@
 
 嫌われてもいいけど、恨まれてはならない。
 嫌われたらただ離れるだけだが、恨まれると害がある。
+
+嫌いなのと危険視しているのは分けて考えないといけない。
+嫌いなら離れればいいけど、危険視しているなら最悪殺さないといけない。特に政治家は日本のどこにいても影響を受けるので、政治活動なんかで選挙に落としたりして徹底的に影響を排除するしかない。
+
+嫌われても恨まれなければ何も起きない。
