--- a/shared/music/vocal/training/tips/キーを変えて歌う.md
+++ b/shared/music/vocal/training/tips/キーを変えて歌う.md
@@ -64,3 +64,5 @@ https://note.com/atano/n/n3c01c44d8bae
 明るめの曲でオク下にすると低すぎる。
 
 基本的には原キーで、オク下に下げるなら爽やかに明るく歌いたいのとか+2くらいで。
+
+キーはテンション。テンションが高い曲はキーを下げられない。
