--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -464,13 +464,16 @@ Cだと受け身を見てHKと3HKを出し分ける。
 
 中央の詐欺飛びは後方受け身だと遠いので、コンボは2MPとか。
 
-## スピン-リンク: -3
+## スピンキャンセルの読み合い
 
-- ガード: -3で投げ間合い、様子見
-- Sレオパード: 暴れ潰し、ガードされると投げ間合いにならない
+- Sレオパード: 暴れ潰し
 - 前投げ: 8F遅れ、パリィやインパクトしてくる相手への対策
 - 2LK: 7F遅れ、下段
+- ガード: -3で投げ間合い、様子見
 - Sマレット: 14F遅れ、中段、4F技でも空中食らい
+
+ちゃんと対策できているなら、コパンかインパクトで暴れる人が多い。
+となるとこちらは逆にレオパードと投げで崩すのが有効。
 
 基本的には弱か、中央の中から。
 端の中スピンは詐欺飛びできる。
