--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -1,3 +1,38 @@
+<!--
+
+初級
+
+- コンボ: {遠} DR MK/J.HK, 2MP, 弱グライド
+- コンボ: 6HP-HP-HP, Sレオパード, ODホーン
+- コンボ: 2LP/2LK, 2LP, 弱スピン, DR MK
+
+中級:
+
+- 確反コンボ: HP(pc)
+- 確反コンボ: DI(pc)
+- コンボ: 2LP/2LK, 2LP, 弱スピン-Sレオパード
+- コンボ: 2LP/2LK, 2LP, 弱スピン-Sレオパード
+- コンボ: 2LP/2LK, 2LP, 弱スピン-Sマレット
+- コンボ: DR MK/J.HK, 2HP
+- コンボ: DI(壁)
+- 起き攻め: {端} 弱昇竜, 弱リンク: +8
+- 起き攻め: {端} 強昇竜, LK: +4
+- 起き攻め: 弱スピン, DR 2LK/6MK
+- 起き攻め: {端} 前投げ
+
+上級:
+
+- 確反コンボ: MK(pc)
+- 差し返し: 2MP(pc), 弱リンク
+- 起き攻め: {端} 6HP-HP-HP, HP: +5
+- 起き攻め: {端} 弱スピン, 2MK: +5
+- コンボ: 2MK-HK
+- コンボ: 6MK-MK
+- コンボ: 2MP, CR MK
+- コンボ: HP
+
+ -->
+
 ## 共通設定
 
 （ダミー設定 > ガード: ランダム）
@@ -5,28 +40,24 @@
 
 <!-- 初級 -->
 
-## 6HPのヒット確認
+## 6HPとSレオパードのヒット確認
 
 （反撃設定 > ダウンリバーサル: ドライブインパクト）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
 - 6HP-HP-HP
-  - 弱リンク-強Sレオパード, ...
+  - 弱リンク-強Sレオパード, ODホーン
+    - 弱リンク-強Sレオパード, ...
+    - 弱リンク, 後退
+    - {端} 強昇竜: 端が近いとき
+      - LK, 前投げ
+    - {端} 弱昇竜: 端が遠いとき
+      - 弱リンク, MK(+3)
   - 弱リンク-強Sレオパード, {DI}, DI(pc), ...
+  - 弱リンク-強Sレオパード(g), 後退
 - 6HP(g), ガード
 
 6HPのTC派生は猶予が長いので、まずはどこまで遅らせてもコンボになるか試すところから始めるといい。
-
-## Sレオパードのヒット確認 (初級)
-
-- Sレオパード, ODホーン
-  - 弱リンク-強Sレオパード, ...
-  - {端} 強昇竜
-    - LK, 前投げ, ステップ, 後退
-    - LK, 後退
-- Sレオパード(g), 後退
-
-6HPのヒット確認と一緒に練習するといい。
 
 ## 弱攻撃のヒット確認
 
@@ -351,7 +382,9 @@ DR 6MPは相打ちでもコンボになる。
   - SA3
   - DR 投げ
 
-## 近距離のジャンプ攻撃
+## BO壁ドンの練習
 
-- {端} J.HK, 2HP, 強スピン, 弱ホーン, 強昇竜
-- {端} J.HK, 2HP, 強スピン, 中ホーン, SA3
+（ドライブゲージ 2P: BO）
+
+- {端} DI(壁), 前進, J.HK, 2HP, 強スピン, 弱ホーン, 強昇竜, LK, 前投げ
+- {端} DI(壁), 前進, J.HK, 2HP, 強スピン, 中ホーン, SA3
