--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -620,10 +620,10 @@ Cだと受け身を見てHKと3HKを出し分ける。
 
 ## Sレオパード(g): {近} 1
 
+- 2LP, 2LP: ワンパン確認してコンボ、ガードされると2回目が届かない
 - 2LP, HP: ガードして小パン暴れの守りを潰す
 - 2LP, MK-HK: カウンター確認で繋がる、ガードして小パン暴れを潰す、後退されるとMKが届かない
 - 後退: 投げ間合いの外に下がる
-- 2LP, 2LP: ガードされると2回目が届かないのでワンパン確認が必要
 - MK, 弱グライド: 5F遅れ
 - 2MK: 8F遅れ、立ち確認してグライド
 
