--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -772,3 +772,6 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 
 興味関心の範囲が狭いとビジネス的に良くない。欲しいものがない。
 ただ、生活できてるならべつに求めるものも少ないし悪くない。
+
+生活費（経費）を稼ぐことよりも、まずどのようなビジネス＝社会貢献をするか考える。
+ファイナンスは手段でしかない。
