--- a/shared/wealth/福祉.md
+++ b/shared/wealth/福祉.md
@@ -28,3 +28,7 @@ Wealth は福利や福祉の意味がある。
 社交とかビジネスは結局福祉を得るためにある。外部から利益を得ること、特に相手から望んで与えてもらうこと。
 
 奪うのではなく、相手が望んで自分を生かすようにしないと長続きしない。
+
+現代では金が常に外から与えられるせいで、価値がある人＝金を稼げる人しか生きていけない。福祉を得られるのは価値がある人だけ。
+
+価値がなくても生きていくためには、奪うか、金を介さずに食糧や住居を手に入れないといけない。しかし、現代ではほとんどの土地が国に支配されている。
