--- a/study/economics/資本主義.md
+++ b/study/economics/資本主義.md
@@ -35,3 +35,7 @@
 
 農耕と資本主義は切り離せない。
 資本主義をやめるなら、狩猟採集の時代に戻るしかない。
+
+資本主義社会では、金を手に入れるために、価値がない人は迫害される。人としての価値とは信用である。ただ、金を持っている人はそれだけで価値がある。
+
+自分が生かしたい人だけを生かす社会はどうなるか。
