--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -163,3 +163,5 @@ SA3があるなら、BOしても相手も簡単には攻められない。
 中央で投げられたくないキャラはまとめて、それ以外は投げを受け入れた方がいい。抜けるとしても投げ抜けよりジャンプ。
 
 スト６はわからなくなったらとりあえずパリィを長押しするのが大事。見えない裏表とか中下とか。
+
+DIを拒否するなら、ジャンプより投げ。もちろん割り込めないなら無敵技しかないけど。
