--- a/shared/art/history/美術史.md
+++ b/shared/art/history/美術史.md
@@ -1,3 +1,8 @@
 - 『「自分だけの答え」が見つかる 13 歳からのアート思考』末永幸歩
 
 https://ja.wikipedia.org/wiki/%E7%BE%8E%E8%A1%93%E5%8F%B2
+
+中世までの西洋画は宗教画が中心。象徴的なアイコンでなんらかの意味を暗示する絵が多い。
+ルネッサンス以降もまだ宗教画中心ではあるけど、ギリシア的な人体の美しさを強調するような作風が増える。
+モネやミレーの時代に風景や日常を題材にするものが増えて、デフォルメも進んだ。この時代にチューブ式で持ち運びできる絵の具が開発されている。
+ピカソあたりから現代美術に近づいて、ルールが結構曖昧になってる。美術の形や色の面白みが重視されている。
