--- a/shared/cooking/tips/卵を茹でる.md
+++ b/shared/cooking/tips/卵を茹でる.md
@@ -14,3 +14,6 @@ https://youtu.be/AU7wxNrprbs?si=BYz0w3MorNwIBfsu
 レンジで卵を調理するときは必ず黄身に穴を開けて、半熟までにする。1分くらい。
 
 すぐゆで卵にしたかったらポーチドエッグもあり。卵をお湯に割って入れる。
+
+レンジでたまごフィレ:
+卵を深めの皿に入れて白身が残る程度に溶いて1分チン、あとは様子を見ながら都度混ぜて10〜20秒ずつチンでたまごサンドを作る。
