--- a/shared/government/legal/法律.md
+++ b/shared/government/legal/法律.md
@@ -24,3 +24,7 @@
 民法もお金で解決するだけじゃなくて、もっと柔軟に請求できた方がいい。「社長の首を持ってこい」とか「ビルの屋上から逆さ吊りにして24時間」とか。
 
 法治国家では、誰かの権利を制限すれば自分の権利も制限される。
+
+裁判では証拠と動機のセットが基本。
+動機があっても証拠がなければやってないし、証拠があっても動機がなければやる必要がない。
+むしろ証拠があっても動機がないのは証拠を偽造された可能性が高い。
