--- a/shared/knowledge/sharing/知識を共有する.md
+++ b/shared/knowledge/sharing/知識を共有する.md
@@ -3,3 +3,9 @@
 その知識があることでどうなるのか、どういう経緯でその知識が必要とされたのか、など、目的や背景も合わせて伝える。
 
 体験を共有するのが得意な人は、目的や背景を飛ばして、どういうことをするとか、どう思ったとか、意味とは違ったところに偏りがち。
+
+ナレッジはあくまでも知識を共有するもので、情報ではない。情報にして判断するのは探す人がやらないといけない。ナレッジに正解はない。正解を求めても手間がかかりすぎて持続できない。
+
+口頭よりもドキュメントにする。
+
+ナレッジ共有はありもののドキュメントを全て雑に突っ込んで全文検索できるようにするのが手間なしで持続可能。綺麗に管理しようとすると手間がかかりすぎる。
