--- a/shared/communication/effective/効率的なコミュニケーション.md
+++ b/shared/communication/effective/効率的なコミュニケーション.md
@@ -1,6 +1,6 @@
 コミュニケーションに効率を求めすぎると社交が下手になる。
 
-コミュニケーションコストは低いほどいい。
+コミュニケーションだけを考えるなら、コストは低いほどいい。
 
 まずは情報量とコミュニケーションの回数を減らす。
 その上で、優れた情報、優れた意思決定につながる情報を優先して渡す。
@@ -17,3 +17,6 @@
 まずはコミュニケーションが必要になる仕組みを減らして、それから必要なコミュニケーションをしっかりとる。
 
 判断ミスが増えた場合にコミュニケーションを増やすのではなく、その情報がなくても判断できるように依存関係を解消した方がいい。カプセルにする。
+
+コミュニケーションの効率には時間と手間がある。
+チャットやメールのやり取りは移動する手間がかからない代わりに時間がかかる。まぁ、手紙の時代よりは早い。
