--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -151,17 +151,6 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 相手がしゃがみガードから4F技を出すと割り込めるので、ガードされているのにHP-HPを出したらわかる。
 
-## 弱攻撃のコンボ
-
-（反撃設定 > ダウンリバーサル: 4F技）
-
-- 2LP/2LK, 2LP, 弱スピン
-  - DR 6MP, MK-HK, 強ホーン, DR 6MK, ...
-  - DR 2LK, MK-HK, 強ホーン, DR 2LK, ...
-- 2LP/2LK(g), 2LP, ガード
-
-目押しの起き攻めはギリギリで難しい。
-
 ## 端の柔道
 
 （反撃設定 > ダウンリバーサル: 4F技）
@@ -388,3 +377,14 @@ DR 6MPは相打ちでもコンボになる。
 
 - {端} DI(壁), 前進, J.HK, 2HP, 強スピン, 弱ホーン, 強昇竜, LK, 前投げ
 - {端} DI(壁), 前進, J.HK, 2HP, 強スピン, 中ホーン, SA3
+
+## ラッシュ中下段の崩し
+
+（反撃設定 > ダウンリバーサル: 4F技）
+
+- 2LP/2LK, 2LP, 弱スピン
+  - DR 2LK/6MP, MK-HK, 強ホーン, DR 2LK/6MK, ...
+  - {端} DR 2LK/6MP, MK-HK, 中ホーン, 弱昇竜, 弱リンク, 後退
+- 2LP/2LK(g), 2LP, ガード
+
+目押しの起き攻めはギリギリで難しい。
