--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -5,21 +5,28 @@
 - {空} DR 2MP, 中スピン-Sハーベスト, 弱ホーン: 確反、インパクト系で頻出
 - {端} 弱/強昇竜: 端のコンボの〆で頻出
 
-## +4/+5
+## 密着 3-5
 
 - 2LK, 2LP: 下段
-- MK, 2LP
-- MK-HK, 弱グライド: 入れ込みで簡単、5F技で割り込まれる
+- MK
+  - 2LP: ガードされていても埋まる
+  - 投げ: ガードされていると4F遅れ
+- MK, 弱グライド
+- MK-HK
+  - {ガード} 弱グライド: ガードされていると5F遅れ
 - 前投げ
 
 ド密着だと遅らせ投げ抜けに弱いので、後退がシミーになるように調整すると強い。
 
-## +8
+## 密着 8
 
 - MK(+3)(g): +4
   - 後退: シミー
 - 後退: 最速投げ以外にシミー
 - 垂直J.HK: 通常投げにパニカン
+- 前投げ: 目押しで重ねる
+
+MK持続当てが基本。
 
 ド密着にするとMK(+3)のあと投げが届く。
 基本的にはシミーを狙うよりも一旦重ねた方がいい。
@@ -129,13 +136,10 @@ MK-HK, 強ホーンより少し近い。
 
 コパコパやコアコパはど密着でガード限定。ヒットだと1発しか届かない。
 
-## MK(+3)(g): 4
+## MK(+1)(g): 2
 
-投げとシミーを狙える。
-
-- MK, 2LP
-- 前投げ
-- 後退: シミー
+MKや投げが4F技に負けない。
+持続当てやラッシュで狙える。
 
 ## MK-HK, 中スピン-リンク-リンク: 10
 
@@ -557,6 +561,12 @@ Cだと受け身を見てHKと3HKを出し分ける。
   - 2LK, 2LP: 下段
   - 投げ
 - DR LK, 強スピン-Sマレット: 中段
+
+## 強スピン, DR 2MP, 弱ホーン: {遠} 40
+
+## 強スピン, DR 2MP, 中ホーン: {遠} 39
+
+## 強スピン, DR 2MP, 強ホーン: {遠} 38
 
 ## 強スピン, 弱ホーン: {遠} 38
 
