--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -38,33 +38,74 @@
 （ダミー設定 > ガード: ランダム）
 （ダミー設定 > 起き上がり: 後方受け身）
 
-<!-- 初級 -->
+## 初級
 
-## 6HPとSレオパードのヒット確認
+### Sレオパードのヒット確認
+
+- Sレオパード(h)
+  - ODホーン
+    - 弱リンク-強Sレオパード, ...
+    - 弱リンク, 後退
+  - {端} ODホーン, 強昇竜: 端が近いとき
+    - LK, 前投げ
+    - LK, 後退
+  - {端} ODホーン, 弱昇竜: 端が遠いとき
+    - 弱リンク, MK(+3), ...
+- Sレオパード(g), 後退
+
+6HPのヒット確認と一緒に練習するといい。
+
+### インパクト返しのコンボ
+
+（ドライブインパクトへの対応練習）
+
+- DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 弱ホーン
+  - 弱リンク-強Sレオパード, ...
+  - 弱リンク-強Sレオパード, {DI}, DI(pc), ...
+- {端} DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 弱昇竜 2回
+  - 弱リンク, 後退
+
+### ジャンプ・ラッシュ攻撃のコンボ
+
+（反撃設定 > ダウンリバーサル: ドライブインパクト）
+（反撃設定 > ダウンリバーサル: 何もしない）
+
+- J.HK/DR MK(h)
+  - 2HP, 強スピン, DR 2MP, 中ホーン
+    - 弱リンク-強Sレオパード, ...
+    - 弱リンク-強Sレオパード, {DI}, DI(pc), ...
+- J.HK/DR MK(g)
+  - MK, 2LP, 弱スピン-Sマレット, ...
+  - MK(g), 2LP, ガード
+
+### 6HPのヒット確認
 
 （反撃設定 > ダウンリバーサル: ドライブインパクト）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
 - 6HP-HP-HP
-  - 弱リンク-強Sレオパード, ODホーン
-    - 弱リンク-強Sレオパード, ...
-    - 弱リンク, 後退
-    - {端} 強昇竜: 端が近いとき
-      - LK, 前投げ
-    - {端} 弱昇竜: 端が遠いとき
-      - 弱リンク, MK(+3)
+  - 弱リンク-強Sレオパード, ...
   - 弱リンク-強Sレオパード, {DI}, DI(pc), ...
-  - 弱リンク-強Sレオパード(g), 後退
 - 6HP(g), ガード
 
 6HPのTC派生は猶予が長いので、まずはどこまで遅らせてもコンボになるか試すところから始めるといい。
 
-## 弱攻撃のヒット確認
+### Sマレットのヒット確認
+
+- Sマレット(h)
+  - 2LP 2回, 弱スピン-Sマレット, ...
+- Sマレット(g)
+  - 前投げ, ステップ, 後退
+  - 後退
+
+弱スピンのコンボと一緒に練習するといい。
+
+### 弱攻撃のヒット確認
 
 - 2LP/2LK, 2LP, 弱スピン-弱リンク, ガード
 - 2LP/2LK(g), 2LP, ガード
 
-## 弱攻撃とSマレットのヒット確認
+### 弱攻撃とSマレットのヒット確認
 
 - 2LP/2LK, 2LP, 弱スピン-弱リンク
   - Sマレット, 2LP 2回, 弱スピン-Sマレット, ...
@@ -73,9 +114,9 @@
     - 後退
 - 2LP/2LK(g), 2LP, ガード
 
-<!-- 中級 -->
+## 中級
 
-## 昇竜やSAの確反
+### 昇竜やSAの確反
 
 （確定反撃の練習）
 
@@ -87,26 +128,7 @@
 
 端から端まで運ぶ。失敗したらリセット。
 
-## インパクト返しのコンボ
-
-（ドライブインパクトへの対応練習）
-
-- DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 弱ホーン
-  - 弱リンク, 後退
-  - {端} 弱昇竜: 端の追撃
-    - 弱リンク, 後退
-
-## ラッシュ攻撃からのコンボ
-
-- DR MK, 2MP, 弱グライド-6P
-  - ステップ, DR MK, ...
-- DR MK, 2MP, 弱グライド(g), ガード
-
-DR MKをガードされても2MPが埋まる。
-
-慣れてきたらステップを挟まずにDR MKを重ねた方が応用しやすい。
-
-## ジャンプ攻撃からのコンボ
+### ジャンプ攻撃からのコンボ
 
 （反撃設定 > ダウンリバーサル: 無敵技）
 （反撃設定 > ダウンリバーサル: 何もしない）
@@ -119,7 +141,7 @@ DR MKをガードされても2MPが埋まる。
 
 ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
-## 端のインパクトからのコンボ
+### 端のインパクトからのコンボ
 
 （反撃設定 > ガードリバーサル: 4F技）
 
@@ -129,7 +151,7 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 壁ドンはヒットもガードも同じルートでいい。
 
-## キャンセルラッシュの展開
+### キャンセルラッシュの展開
 
 - 2MP, CR MK, 2HP, 強スピン
   - 中ホーン
@@ -139,7 +161,7 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
     - LK, 前投げ/後退
 - 2MP(g), CR MK, MK, 弱グライド, ...
 
-## HPのヒット確認
+### HPのヒット確認
 
 （ガード切り替え: しゃがみガードのみ）
 （ガードリバーサル: しゃがみ4F技）
@@ -151,21 +173,20 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 相手がしゃがみガードから4F技を出すと割り込めるので、ガードされているのにHP-HPを出したらわかる。
 
-## 端の柔道
+### 端の柔道
 
 （反撃設定 > ダウンリバーサル: 4F技）
 
 - {端} 前投げ, DR 前投げ, ...
 
-<!-- 上級 -->
-<!-- マスターになってからでいい -->
+## 上級
 
-## 下段の崩し
+### 下段の崩し
 
 - 2MK-HK, CR MK, 2HP, 強スピン, ....
 - 2MK(g), ガード
 
-## 差し返しの練習
+### 差し返しの練習
 
 （差し返しの練習）
 
@@ -174,7 +195,7 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 - {2HK(g)}, 2HK(pc), 強リンク, MK(+3), ...
 - {2MK(g)}, ガード
 
-## 6HPから端の攻め
+### 6HPから端の攻め
 
 （ダウンリバーサル: 中足 2Fディレイ）
 （ダウンリバーサル: 通常投げ）
@@ -185,7 +206,7 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
   - {端} HP, 後退: シミー
 - 6HP(g), ガード
 
-## Sレオパードのヒット確認 (上級)
+### Sレオパードのヒット確認 (上級)
 
 （反撃設定 > ガードリバーサル: 4F技）
 （反撃設定 > ガードリバーサル: 何もしない）
@@ -208,7 +229,7 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
  <!-- ---- この辺りから優先度検討中 ---- -->
 
-## 弱攻撃からのスピンキャンセルを使った攻め
+### 弱攻撃からのスピンキャンセルを使った攻め
 
 - 2LP/2LK, 2LP, 弱スピン-弱リンク, ガード
 - 2LP/2LK, 2LP, 弱スピン-弱リンク, 前投げ
@@ -216,14 +237,14 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 - 2LP/2LK, 2LP, 弱スピン-弱Sマレット, ...
 - 2LP/2LK(g), 2LP, ガード
 
-## 6Fの確反
+### 6Fの確反
 
 （ドライブリバーサル: 起き上がり発動）
 
 - MK(pc), 強スピン, 中ホーン
 - {端} MK(pc), 強スピン, 弱ホーン, 強昇竜
 
-## ラッシュ中下段
+### ラッシュ中下段
 
 （反撃設定 > ダウンリバーサル: 4F技）
 
@@ -237,13 +258,13 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 DR 6MPは相打ちでもコンボになる。
 
-## 弱攻撃から伸ばすコンボ
+### 弱攻撃から伸ばすコンボ
 
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, 弱ホーン
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
 - {端} 2LP, 2LP, CR 2LP, 2HP, 強スピン, 弱ホーン, 中昇竜
 
-## 端の弱昇竜からの攻め
+### 端の弱昇竜からの攻め
 
 - {端} DR MK, MK-HK, 中ホーン, 弱昇竜, 弱リンク
   - MK(+3), MK-HK, 中ホーン, 弱昇竜, ...
@@ -253,7 +274,7 @@ DR 6MPは相打ちでもコンボになる。
     - 後退
   - 後退: 最速投げ以外にシミー
 
-## 端の強昇竜からの攻め
+### 端の強昇竜からの攻め
 
 （ダウンリバーサル: 通常投げ 3Fディレイ）
 （ダウンリバーサル: 前方ジャンプ）
@@ -266,23 +287,23 @@ DR 6MPは相打ちでもコンボになる。
     - {通常投げ}, HP(pc), ...
     - {前方ジャンプ}, 対空
 
-## 中段の崩し
+### 中段の崩し
 
 - 6MK(g), ガード
 - 6MK-MK
   - DR 2LK/6MK, ...
 
-## 4Fの確反
+### 4Fの確反
 
 - 2LP(pc), 2MP, 弱グライド-6P
 
-## SA1でダメージを伸ばすコンボ
+### SA1でダメージを伸ばすコンボ
 
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, SA1, OD昇竜
 - DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, SA1, OD昇竜
 - DI(壁), 2MP, 中スピン-Sハーベスト, SA1, OD昇竜
 
-## SA2でダメージを伸ばすコンボ
+### SA2でダメージを伸ばすコンボ
 
 - 2LP/2LK, 2LP, CR 2LP, 2HP, 強スピン, SA2
 - 2MP, CR MK, 2HP, 強スピン, SA2
@@ -292,7 +313,7 @@ DR 6MPは相打ちでもコンボになる。
 - DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, SA2
 - DI(壁), 2MP, 中スピン-Sハーベスト, SA2
 
-## SA3でダメージを伸ばすコンボ
+### SA3でダメージを伸ばすコンボ
 
 - 2LP/2LK, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
@@ -302,23 +323,23 @@ DR 6MPは相打ちでもコンボになる。
 - DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 中ホーン, SA3
 - DI(壁), 2MP, 中スピン-Sハーベスト, 中ホーン, SA3
 
-## 端の最大確反
+### 端の最大確反
 
 - {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜, 弱リンク, ...
 - {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜, LK, ...
 
-## 中段の持続当て
+### 中段の持続当て
 
 - {端} 弱昇竜, 2LK, 6MK, 2LP, 弱スピン, 2MK
   - 前投げ
   - 後退: シミー
 - {端} 弱昇竜, 2LK, 6MK(g), 2LP, ガード
 
-## ノーゲージの確反
+### ノーゲージの確反
 
 - HP(pc)-HP, 弱ホーン, 弱昇竜/強昇竜/SA3
 
-## 端の弱スピンからの攻め
+### 端の弱スピンからの攻め
 
 （反撃設定 > ダウンリバーサル: 通常投げ）
 （反撃設定 > ダウンリバーサル: 何もしない）
@@ -327,43 +348,43 @@ DR 6MPは相打ちでもコンボになる。
   - 前投げ
   - 後退, {通常投げ}, 2MP(pc), 強スピン, ...
 
-## MPのヒット確認
+### MPのヒット確認
 
 （しゃがみ）
 
 - MP-MP, 弱グライド-6P, DR 6MK/2LK/投げ, ...
 - MP(g), ガード
 
-## Sマレットを使った攻め 2
+### Sマレットを使った攻め 2
 
 - Sマレット, 2LP 2回, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
 - Sマレット(g)
   - 後退
 
-## ジャンプ中攻撃のコンボ
+### ジャンプ中攻撃のコンボ
 
 - J.MK, MK-HK, 強ホーン, 弱リンク, 後退
 - J.MK(g), MK, 2LP, 弱スピン, ...
 - J.MK(g), MK(g), ガード
 
-## ジャンプ弱攻撃のコンボ
+### ジャンプ弱攻撃のコンボ
 
 - J.LP-MP, MK-HK, 強ホーン, 弱リンク, 後退
 - J.LP-MP(g), MK, 2LP, 弱スピン, ...
 - J.LP-MP(g), MK(g), ガード
 
-## インパクト返しのSA3コンボ
+### インパクト返しのSA3コンボ
 
 （ドライブインパクトへの対応練習）
 
 - DI(pc), ステップ, HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3
 
-## 弱攻撃のコンボ
+### 弱攻撃のコンボ
 
 - 2LP, LK, 強昇竜
 - 2LP, LK, CR 2LP, 2HP, 強スピン, ...
 
-## 弱攻撃のヒット確認と弱スピン、SA3の起き攻め
+### 弱攻撃のヒット確認と弱スピン、SA3の起き攻め
 
 （ダウンリバーサル: 4F技）
 
@@ -371,14 +392,14 @@ DR 6MPは相打ちでもコンボになる。
   - SA3
   - DR 投げ
 
-## BO壁ドンの練習
+### BO壁ドンの練習
 
 （ドライブゲージ 2P: BO）
 
 - {端} DI(壁), 前進, J.HK, 2HP, 強スピン, 弱ホーン, 強昇竜, LK, 前投げ
 - {端} DI(壁), 前進, J.HK, 2HP, 強スピン, 中ホーン, SA3
 
-## ラッシュ中下段の崩し
+### ラッシュ中下段の崩し
 
 （反撃設定 > ダウンリバーサル: 4F技）
 
@@ -388,3 +409,25 @@ DR 6MPは相打ちでもコンボになる。
 - 2LP/2LK(g), 2LP, ガード
 
 目押しの起き攻めはギリギリで難しい。
+
+### DR MKのヒット確認
+
+（反撃設定 > ガードリバーサル: 通常投げ 4Fディレイ）
+（反撃設定 > ガードリバーサル: 何もしない）
+
+- DR MK(h)
+  - MK-HK, ODスピン-Sハーベスト, 中ホーン
+  - {端} MK-HK, 弱ホーン, 弱昇竜
+- DR MK(g)
+  - MK(h)
+    - 2LP, CR 2LP, 2HP, 強スピン, ...
+  - MK(g)
+    - 2LP(h)
+      - LK, CR 2LP, 2HP, 強スピン, ...
+    - 2LP(g)
+      - ガード
+  - 後退
+    - {通常投げ}, HP(pc), ...
+    - {何もしない}, ガード
+
+持続当ても同じ。
