--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -5,7 +5,7 @@
 - {空} DR 2MP, 中スピン-Sハーベスト, 弱ホーン: 確反、インパクト系で頻出
 - {端} 弱/強昇竜: 端のコンボの〆で頻出
 
-## 密着 3-5
+## +3...+5
 
 - 2LK, 2LP: 下段
 - MK
@@ -18,10 +18,9 @@
 
 ド密着だと遅らせ投げ抜けに弱いので、後退がシミーになるように調整すると強い。
 
-## 密着 8
+## +8
 
-- MK(+3)(g): +4
-  - 後退: シミー
+- MK(+3): ガードされても+4
 - 後退: 最速投げ以外にシミー
 - 垂直J.HK: 通常投げにパニカン
 - 前投げ: 目押しで重ねる
@@ -30,10 +29,6 @@ MK持続当てが基本。
 
 ド密着にするとMK(+3)のあと投げが届く。
 基本的にはシミーを狙うよりも一旦重ねた方がいい。
-
-## +21
-
-- 6MK(+2): 中段の持続当て
 
 ## +22
 
@@ -71,7 +66,7 @@ MK持続当てが基本。
 ## +36
 
 - 弱リンク: +8
-- 2LK: +21
+- 2LK, 6MK(+2)
 
 弱昇竜やMK-HK, 強ホーンから。
 
@@ -79,7 +74,7 @@ MK持続当てが基本。
 
 - HP: +4
   - 後退: シミー
-- LK: +21
+- LK, 6MK(+2)
 
 地上の通常グライドや通常ホーンから。
 
@@ -138,8 +133,14 @@ MK-HK, 強ホーンより少し近い。
 
 ## MK(+1)(g): 2
 
-MKや投げが4F技に負けない。
-持続当てやラッシュで狙える。
+通常のMKの攻めに加えて、MKや2LK、投げが4F技に負けない。
+持続当てやラッシュで狙える。ラッシュの場合は+5なので投げが空振りする。
+
+- MK(g), 2LP: 無敵技以外で割り込まれない
+  - LK: 中攻撃を潰してカウンター
+  - HP: 弱攻撃にパニカン
+- MK, 弱グライド: 無敵技以外で割り込まれない
+- MK-HK, 弱グライド: 入れ込みで簡単、5F技で割り込まれる
 
 ## MK-HK, 中スピン-リンク-リンク: 10
 
